# leaftracker

./: LICENSE  README.md  pyproject.toml
leaftracker-gtk/: org.bswa.jhanarato.Leaftracker.json
leaftracker-gtk/src/: leaftracker_gtk.gresource.xml  main.py  meson.build  window.py  window.ui
src/: tools.py
src/leaftracker/adapters/: elastic.py  elastic_index.py  elastic_repository.py  elasticsearch.py  indexes.py  repository.py
src/leaftracker/domain/: model.py
src/leaftracker/frontend/: species_editor.py  starter.py
src/leaftracker/service_layer/: elastic_uow.py  services.py  unit_of_work.py
src/revegetator/adapters/: repository.py
src/revegetator/domain/: model.py
src/revegetator/service_layer/: services.py  unit_of_work.py
test/: conftest.py  fakes.py  test_batch_arrives.py  test_batches.py  test_elastic_index.py  test_elastic_learn.py  test_elastic_repository.py  test_elastic_uow.py  test_elasticsearch.py  test_fake_persistence.py  test_fake_uow.py  test_references.py  test_services.py  test_taxons.py  test_tools.py
test/integration/: test_elastic_repositories.py  test_elasticsearch.py  test_repositories_with_real_indexes.py
test/unit/: conftest.py  fakes.py  test_aggregate_io.py  test_batch_repository.py  test_batches.py  test_elastic_conversion.py  test_elastic_repository.py  test_elastic_uow.py  test_fake_document_store.py  test_fake_persistence.py  test_model_batch.py  test_references.py  test_services.py  test_source_of_stock_repository.py  test_sources.py  test_species_repository.py  test_taxons.py
(+17 files in other folders)
