[tool.poetry]
name = "leaftracker"
version = "0.1.0"
description = "Manage revegetation projects"
authors = ["Ajahn Jhanarato <jhanarato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]